apps/services/media/sonarr/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
  annotations:
    link.argocd.argoproj.io/external-link: https://sonarr.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:v4-9892b99
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
            - name: https
              containerPort: 9898
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: true
          livenessProbe:
            httpGet:
              path: /
              port: 8989
              scheme: HTTP
          startupProbe:
            httpGet:
              path: /
              port: 8989
              scheme: HTTP
          resources:
            limits:
              cpu: 500m
              memory: 736Mi
            requests:
              cpu: 350m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
            - name: anime
              mountPath: /anime
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-storage
        - name: movies
          persistentVolumeClaim:
            claimName: movie-library
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-storage
        - name: anime
          persistentVolumeClaim:
            claimName: anime-library
