apps/services/media/sonarr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-internal
  labels:
    app: sonarr
  annotations:
    kube-vip.io/vipHost: sonarr
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8989
    protocol: TCP
  - name: https
    port: 443
    targetPort: 9898
    protocol: TCP
  selector:
    app: sonarr
  type: LoadBalancer
  loadBalancerIP: "192.168.1.150"
  loadBalancerClass: kube-vip.io/kube-vip-class
